# helion-fx-mlir

./: .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md  matmul.py  project.plan.md  requirements.txt
custom_op/: __init__.py  gather.py
custome_op/: __init__.py  gather.py
docs/: block_loop_bounds_lowering_readme.md  block_sizes_in_helion.md  example_device_ir_ops.md  lowering_pipeline_and_ownership.md  software_architecture.md
examples/: attn.py  helion_matmul.py  matmul.py
examples/outputs/: attn.mlir  batch_matmul.mlir  flash_attention.mlir  mamba_chunk_scan.mlir  matmul.mlir  matmul_split_k.mlir  matmul_split_k_barrier.mlir  matmul_split_k_gather.mlir  mqa_decode.mlir
examples/scripts/: attn.py  batch_matmul.py  flash_attention.py  mamba_chunk_scan.py  matmul.py  matmul_split_k.py  matmul_split_k_barrier.py  matmul_split_k_gather.py  mqa_decode.py
helion2json/: README.md  __init__.py  cli.py
helion2json/core/: __init__.py  capture.py  cli.py  schema.py
helion2json/tests/: test_matmul.py
json2mlir/tests/FileCheck/: matmul_tiled.json
mlir/: CMakeLists.txt
mlir/include/helion/IR/: HelionDialect.h  HelionOps.h  HelionOps.td
mlir/lib/IR/: HelionDialect.cpp
mlir/tools/helion-opt/: HelionOpt.cpp
src/: __init__.py  ir_visitor.py
src/helion_fx_mlir/: __init__.py  helion_mlir.py  ir_visitor.py  lowering_context.py  mlir_builder.py  op_registry.py  torch_mlir_helper.py
src/helion_fx_mlir/lowerings/: __init__.py  aten_ops.py  base.py  control_flow.py  memory_ops.py  tracing_ops.py
src/helion_mlir/: __init__.py  analysis.py  debug_utils.py  emitter.py  errors.py  helion_mlir.py  ir_visitor.py  lowering_context.py  mlir_utils.py  models.py  registry.py  resolvers.py  session.py  torch_mlir_helper.py
src/helion_mlir/custom_op/: __init__.py  broadcast.py  gather.py
src/helion_mlir/custome_op/: __init__.py
src/helion_mlir/handlers/: __init__.py  compute.py  control_flow.py  memory.py  symbols.py  tensor_ops.py  tile.py
tests/: test_anonymization_guard.py  test_block_loop_bounds.py  test_complexity_guards.py  test_handler_registry.py  test_public_api_contract.py  test_registry_injection.py  test_session_scopes.py
(+4 files in other folders)
